Added annotations to client scripts

--- a/client/index.html
+++ b/client/index.html
@@ -85,6 +85,15 @@
                            <p id="calculation-result"></p>
                         </div>
                      </div>
+                     <div class="eleven wide column">
+                        <div class="ui error message transition" id="error-message">
+                           <i class="close icon" id="close-error-icon"></i>
+                           <div class="header"></div>
+                           <ul class="list">
+                              <li>The server could not process your request.</li>
+                           </ul>
+                        </div>
+                     </div>
                   </div>
                </div>
             </form>
