added error messages

--- a/client/index.html
+++ b/client/index.html
@@ -86,12 +86,10 @@
                         </div>
                      </div>
                      <div class="eleven wide column">
-                        <div class="ui error message transition" id="error-message">
+                        <div class="ui error message transition hidden" id="error-message">
                            <i class="close icon" id="close-error-icon"></i>
-                           <div class="header"></div>
-                           <ul class="list">
-                              <li>The server could not process your request.</li>
-                           </ul>
+                           <div class="header">Error</div>
+                           <ul class="list" id="error-list"></ul>
                         </div>
                      </div>
                   </div>
