--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
          crossorigin="anonymous"
          referrerpolicy="no-referrer"
       />
-      <link rel="stylesheet" href="styles/main.css" />
+      <link rel="stylesheet" href="./styles/main.css" />
    </head>
    <body>
       <div id="app">
