--- a/client/index.html
+++ b/client/index.html
@@ -97,6 +97,6 @@
             </form>
          </div>
       </div>
-      <script type="module" src="/scripts/main.js"></script>
+      <script type="module" src="/scripts/main.ts"></script>
    </body>
 </html>
